kubernetes/mango/apps/storage/longhorn/chart/templates/netpols.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-manager-metrics
  namespace: longhorn-system
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: vmagent
  podSelector:
    matchLabels:
      app: longhorn-manager
  policyTypes:
    - Ingress
